tests/errors/runtime.IntegerOperationOverflow.art
a: 1234567891234
b: 2345678912345

print a * b